--- a/jenkins-config-as-code/docker-compose.yml
+++ b/jenkins-config-as-code/docker-compose.yml
@@ -7,12 +7,15 @@ services:
     container_name: jenkins
     ports:
       - 8080:8080
+      - 50000:50000
     volumes:
       - jenkins:/var/jenkins_home
+      - ./jenkins/jenkins.yml:/var/jenkins_home/jenkins.yml
     environment:
       CASC_JENKINS_CONFIG: '/var/jenkins_home/jenkins.yml'
       JENKINS_ADMIN_ID: ${JENKINS_ADMIN_ID}
       JENKINS_ADMIN_PASSWORD: ${JENKINS_ADMIN_PASSWORD}
       JENKINS_URL: ${JENKINS_URL}
+
 volumes:
   jenkins:
