--- a/jenkins-config-as-code/jenkins/jenkins.yml
+++ b/jenkins-config-as-code/jenkins/jenkins.yml
@@ -2,6 +2,7 @@ jenkins:
   systemMessage: "Jenkins configured automatically by Jenkins Configuration as Code plugin\n\n"
   scmCheckoutRetryCount: 3
   labelString: "master"
+  numExecutors: 0
   securityRealm:
     local:
       allowsSignup: false
@@ -29,6 +30,34 @@ jenkins:
         - "GROUP:SCM/Tag:authenticated"
         - "GROUP:Overall/Read:authenticated"
         - "USER:Overall/Administer:${JENKINS_ADMIN_ID}"
+
+  nodes:
+    - permanent:
+        labelString: "maven36"
+        launcher:
+          ssh:
+            credentialsId: "jenkins-agent"
+            host: "${JENKINS_AGENT_HOST}"
+            port: 2222
+            sshHostKeyVerificationStrategy: "nonVerifyingKeyVerificationStrategy"
+        mode: EXCLUSIVE
+        name: "linux"
+        remoteFS: "/home/jenkins/agent"
+        retentionStrategy: "always"
+
+credentials:
+  system:
+    domainCredentials:
+      - credentials:
+          - basicSSHUserPrivateKey:
+              id: jenkins-agent
+              description: jenkins-agent
+              scope: SYSTEM 
+              username: jenkins 
+              privateKeySource: 
+                directEntry:
+                  privateKey: ${agent_private_key}
+
 
 unclassified:
   location:
